# CRK_guild_boss

./: .gitignore  CRK_guild_boss_analysis.ipynb  Preprocessing.py  README.md  cleaning.ipynb  cleaning.py  combine.ipynb  main.py  notebook.ipynb  pyproject.toml  report.ipynb  vizapp.py
data/: CRK_guild_boss.csv  CRK_guild_boss.pkl  MolochTHbackup.xlsx
report/: CRK Top 10 Guilds  Dark Cacao npromda.twbx  CRK Top 10 Guilds  Dark Cacao.twbx  CRK_guild_boss_EDA_report.html  Leaderboard.twbx  Viz.twb  Viz.twbx  config.json  molochth.twbx  ranking_overtime.html  top10_ranking_overtime.html  top10_trophies_overtime.html  top20_ranking_overtime.html  ~Viz__12764.twbr
