[tool.poetry]
name = "crk-guild-boss"
version = "0.1.0"
description = "extract data from screenshots, clean, and summarize for stratigic planning"
authors = ["Nutthawoot Promda <npromda@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.4"
pillow = "^10.3.0"
opencv-python = "^4.9.0.80"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
