[tool.poetry]
name = "crk-guild-boss"
version = "0.1.0"
description = "extract data from screenshots, clean, and summarize for stratigic planning"
authors = ["Nutthawoot Promda <npromda@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.13"
ipykernel = "^6.29.4"
pillow = "^10.3.0"
opencv-python = "^4.9.0.80"
pytesseract = "^0.3.10"
pandas = "^2.2.2"
black = "^24.4.2"
numpy = "^1.26.4"
sidetable = "^0.9.1"
plotly = "^5.22.0"
openpyxl = "^3.1.2"
nbformat = "^5.10.4"
ipywidgets = "^8.1.2"
streamlit = "^1.35.0"
pygwalker = "^0.4.8.6"
ydata-profiling = "^4.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
