[project]
name = "crk-guild-boss"
dynamic = [ "version" ]
description = "extract data from screenshots, clean, and summarize for stratigic planning"
authors = [
    { name = "Nutthawoot Promda", email = "npromda@hotmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
package-mode = false
dependencies = [
    "pytesseract (>=0.3.10)",
    "pandas (>=2.2.2)",
    "black (>=24.4.2)",
    "sidetable (>=0.9.1)",
    "plotly (>=5.22.0)",
    "openpyxl (>=3.1.2)",
    "nbformat (>=5.10.4)",
    "ipywidgets (>=8.1.2)",
    "streamlit (>=1.35.0)",
    "pygwalker (>=0.4.8.6)",
]


[project.urls]
repository = "https://github.com/nutthawootp/CRK_guild_boss"
documentation = "https://github.com/nutthawootp/CRK_guild_boss"


[tool.poetry]
version = "1.0"  

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
